--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,6 +9,48 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+        <StackPanel>
+            <TextBlock
+                x:Name="ScannerId" 
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom" 
+                FontSize="32"
+                Padding="0,0,0,8">
+                No scanner connected
+            </TextBlock>
+            <ListView 
+                x:Name="DataList"
+                Height="600"/>
+            <Button
+                HorizontalAlignment="Center"
+                FontSize="24"
+                Width="84">
+                Clear              
+            </Button>
+            <Grid x:Name="bottomToolbar">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="100"/>
+                </Grid.RowDefinitions>                 
+                    <HyperlinkButton     
+                        Grid.Column="0"
+                        Content="Socket Github" 
+                        NavigateUri="https://github.com/SocketMobile"
+                        FontSize="24">
+                    </HyperlinkButton>
 
+                    <TextBlock Grid.Row="1" Grid.Column="1"
+                        x:Name="SdkVersion" 
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center" 
+                        FontSize="24">
+                        SDK Version:
+                    </TextBlock>       
+            </Grid>
+
+        </StackPanel>
     </Grid>
 </Page>
