--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="capturesingleentry_uwp.App"
+    x:Class="CaptureSingleEntryUWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:capturesingleentry_uwp">
+    xmlns:local="using:CaptureSingleEntryUWP">
 
 </Application>
