--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,27 +1,39 @@
 ﻿<Page
-    x:Class="capturesingleentry_uwp.MainPage"
+    x:Class="CaptureSingleEntryUWP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:capturesingleentry_uwp"
+    xmlns:local="using:CaptureSingleEntryUWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    DataContext="CaptureSingleEntryUWP.MainPage"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
+
+    
     <Grid>
         <StackPanel>
             <TextBlock
-                x:Name="ScannerId" 
+                Text="{x:Bind ScannerName, Mode=OneWay}"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Bottom" 
                 FontSize="32"
                 Padding="0,0,0,8">
-                No scanner connected
+
             </TextBlock>
-            <ListView 
-                x:Name="DataList"
-                Height="600"/>
+
+            <!--<ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Style="{ThemeResource TitleTextBlockStyle}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>-->
+            
+            <ListView
+                x:Name="DataList"               
+                Height="600">
+            </ListView>
             <Button
+                Click="OnClearButtonClick"
                 HorizontalAlignment="Center"
                 FontSize="24"
                 Width="84">
@@ -43,11 +55,10 @@
                     </HyperlinkButton>
 
                     <TextBlock Grid.Row="1" Grid.Column="1"
-                        x:Name="SdkVersion" 
+                        Text="{x:Bind SdkVersion, Mode=OneWay}"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center" 
                         FontSize="24">
-                        SDK Version:
                     </TextBlock>       
             </Grid>
 
